--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "axios-retry": "^4.5.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.12.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
@@ -27,7 +28,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
