Feat: Update UI text to Vietnamese and modify backend URL in environment file

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_BACKEND_URL=http://localhost:8080/api
+VITE_BACKEND_URL=https://forum-be-own1.onrender.com/api
 # https://forum-be-0fwc.onrender.com/api
+VITE_GOOGLE_CLIENT_ID=103585613203-nbtsa5i13c2q7l42jp8puusq0jfvegud.apps.googleusercontent.com
