✨ feat(question): add sync question feature and improve ui
- add sync question button to question filters
- create useSyncQuestion hook to handle sync logic
- add api endpoint to sync questions from external source
- improve ui by adding empty state to reports and posts pages
- fix optional chaining for tags and topics in post and question filters
- translate "no reports found" to vietnamese in report list
- add env variables to .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_BACKEND_URL=http://localhost:8080/api
-# https://forum-be-0fwc.onrender.com/api
+VITE_GOOGLE_CLIENT_ID=103585613203-nbtsa5i13c2q7l42jp8puusq0jfvegud.apps.googleusercontent.com
+VITE_NOVU_KEY=hhk1TfDf1_h3
+VITE_PREDICT_API=http://127.0.0.1:8000
+VITE_FE=http://localhost:5000
